compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 440
expression: "case #(1, 1.0) { #(x, _) | #(_, x) -> 1 }"
---
----- SOURCE CODE
case #(1, 1.0) { #(x, _) | #(_, x) -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:33
  │
1 │ case #(1, 1.0) { #(x, _) | #(_, x) -> 1 }
  │                                 ^

Expected type:

    Int

Found type:

    Float
